--- a/ComcastCRMGUIFramework/pom.xml
+++ b/ComcastCRMGUIFramework/pom.xml
@@ -3,6 +3,60 @@
   <groupId>ComcastCRMGUIFramework</groupId>
   <artifactId>ComcastCRMGUIFramework</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+    <profiles>
+	    <profile>
+	    	<id>FR</id>
+		    	<build>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-plugin</artifactId>
+							<version>3.5.2</version>
+							<configuration>
+								<suiteXmlFiles>
+									<suiteXmlFile>regressionTestTestng.xml</suiteXmlFile>
+								</suiteXmlFiles>
+							</configuration>
+						</plugin>
+					</plugins>
+				</build>
+	    </profile>
+	    <profile>
+	    	<id>SS</id>
+		    	<build>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-plugin</artifactId>
+							<version>3.5.2</version>
+							<configuration>
+								<suiteXmlFiles>
+									<suiteXmlFile>smokeTestTestng.xml</suiteXmlFile>
+								</suiteXmlFiles>
+							</configuration>
+						</plugin>
+					</plugins>
+				</build>
+	    </profile>
+	    <profile>
+	    	<id>RR</id>
+		    	<build>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-plugin</artifactId>
+							<version>3.5.2</version>
+							<configuration>
+								<suiteXmlFiles>
+									<suiteXmlFile>suite_regionalRegressionTest.xml</suiteXmlFile>
+								</suiteXmlFiles>
+							</configuration>
+						</plugin>
+					</plugins>
+				</build>
+	    </profile>
+    </profiles>
+    
     <dependencies>
   	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 	<dependency>
@@ -46,10 +100,17 @@
 	    <artifactId>mysql-connector-j</artifactId>
 	    <version>9.1.0</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
 	<dependency>
+	    <groupId>com.aventstack</groupId>
+	    <artifactId>extentreports</artifactId>
+	    <version>5.1.2</version>
+	</dependency>
+<!--	<dependency>
 		<groupId>Maven_SampleProject</groupId>
 		<artifactId>Maven_SampleProject</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-	</dependency>
+	</dependency>-->
     </dependencies>
 </project>
